Switch to using raft.persisted.VC
Start using the new serialization proxy and deprecate the old one for
removal. Also switch to using unmodifiable list to eliminate copying
around.

JIRA: CONTROLLER-2202
Change-Id: I01d9ec4ab039064cd6f8428a41596ab96e6a55db
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>